[FixLogoMobile] Made icon smaller on logo

--- a/HousingApp/src/components/common/header/header.css
+++ b/HousingApp/src/components/common/header/header.css
@@ -338,8 +338,8 @@
   width: 100%;
 }
 .mob-bar-logo img{
-  height: 92px;
-    width: 154px;
+  height: 72px;
+  width: 135px;
 }
 
 .homeslider{
